--- a/exercises/h1-hello-class.ipynb
+++ b/exercises/h1-hello-class.ipynb
@@ -7,6 +7,7 @@
       },
       "source": [
         "# H1 Hello Class!\n",
+        "Machine Learning for the Arts | Prof. Twomey | [ml.roberttwomey.com](https://ml.roberttwomey.com)\n",
         "\n",
         "## Overview\n",
         "\n",
@@ -14,7 +15,9 @@
         "\n",
         "[Section 1: Working with Markdown](https://colab.research.google.com/github/roberttwomey/ml-art-code/blob/master/exercises/h1-watch-me-learn.ipynb#scrollTo=iB-V7YYh0ZDa&line=7&uniqifier=1) asks you to practice with a little bit of markdown styling.\n",
         "\n",
-        "Section 2 has you pick a text file to use as training data, and then train a minimal little language model from scratch. This part is based on a character-level model written by Andrej Karpathy (@karpathy). We will learn more about what an [RNN](https://en.wikipedia.org/wiki/Recurrent_neural_network) is later. Source: [https://gist.github.com/karpathy/d4dee566867f8291f086](https://gist.github.com/karpathy/d4dee566867f8291f086)"
+        "[Section 2: Watch Me Learn](https://colab.research.google.com/github/roberttwomey/ml-art-code/blob/master/exercises/h1-hello-class.ipynb#scrollTo=fwBSSIin23n7&line=7&uniqifier=1) has you pick a text file to use as training data, and then train a minimal little language model from scratch. This part is based on a character-level model written by Andrej Karpathy (@karpathy). We will learn more about what an [RNN](https://en.wikipedia.org/wiki/Recurrent_neural_network) is later.\n",
+        "\n",
+        "When you are done with Section 1 and Section 2, export your file as a jupyter notebook (.ipynb), and also save a copy as a PDF. Submit this as Homework 1 on Canvas."
       ]
     },
     {
@@ -68,7 +71,38 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Download a text file to work with. In the cell below, replace the URL with a link to a text file you want the model to learn from then run the cell."
+        "# Section 2: Watch Me Learn\n",
+        "Here we are going to do a little machine learning. Just two parts:\n",
+        "\n",
+        "1. Download a text file that you want the language model to learn from.\n",
+        "2. Train the language model and watch it learn from your text file.\n",
+        "\n",
+        "This corresponds to the two parts of a typical ML project: **finding training data** and **training a model**.\n",
+        "\n",
+        "NOTE: The language model below is a character-level Recurrent Neural Network (RNN) written by Andrej Karpathy. It is only 100 lines of code! Source: [https://gist.github.com/karpathy/d4dee566867f8291f086](https://gist.github.com/karpathy/d4dee566867f8291f086)"
+      ],
+      "metadata": {
+        "id": "fwBSSIin23n7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Step 1: Gather Training Data\n",
+        "\n",
+        "You need to download a text file to work with.\n",
+        "\n",
+        "First, find a text file online that you want to use for this project. (Or grab a text file that you already own). This should be a plain text file (ending in .txt), i.e. not a Microsoft Word file, pdf, or anything like that.\n",
+        "\n",
+        "In the cell below, replace the URL (**https://raw.github...**) with the address to a text file you want the model to learn from.\n",
+        "\n",
+        "Then run the cell. This will download the file to the current directory with your notebook.\n",
+        "\n",
+        "**NOTES**:\n",
+        "- You can click on the files icon at left to see the files in your current directory.\n",
+        "- From our intro notebooks, you know that the `!` runs a command on the computer that is running this notebook.\n",
+        "- **wget** is a program on most linux-based computers that downloads a filew from the internet.\n",
+        "- So **!wget https://raw.github...** runs a command to download a file from the internet to our current directory."
       ],
       "metadata": {
         "id": "WlZK0pR8yzwp"
@@ -80,269 +114,39 @@
         "!wget https://raw.githubusercontent.com/roberttwomey/ml-art-code/master/intro/script.txt"
       ],
       "metadata": {
-        "id": "Fv1BqQElc78B",
-        "outputId": "db5d09c2-e794-442e-a0f9-d9330b09c689",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Fv1BqQElc78B"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2024-01-25 18:02:08--  https://raw.githubusercontent.com/roberttwomey/ml-art-code/master/intro/script.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.111.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 82463 (81K) [text/plain]\n",
-            "Saving to: ‘script.txt’\n",
-            "\n",
-            "\rscript.txt            0%[                    ]       0  --.-KB/s               \rscript.txt          100%[===================>]  80.53K  --.-KB/s    in 0.01s   \n",
-            "\n",
-            "2024-01-25 18:02:08 (5.79 MB/s) - ‘script.txt’ saved [82463/82463]\n",
-            "\n"
-          ]
-        }
-      ]
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "^^^ Check out the output above ^^^. Can you make sense of it? What do you think happened..."
+      ],
+      "metadata": {
+        "id": "iQNEATZS5Zmz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Step 2: Source Code for the RNN\n",
+        "This was written by Andrej Karpathy. Do you know who he is?\n",
+        "\n",
+        "Run the following cell to run the basic imports and declare the helper functions for our Recurrent Neural Network."
+      ],
+      "metadata": {
+        "id": "OaQwdujM5jCP"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "kG4fj138ceU3",
-        "outputId": "112baeeb-0079-44f0-edb6-cf4d8f79ff92",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "kG4fj138ceU3"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "data has 82463 characters, 95 unique.\n",
-            "----\n",
-            " $ot@ÓH('mV¨o2\tSÕÕXB\n",
-            "aoaVÑÕkKlk;uDK4,u6L',R|cn30RFÑdd>¨0FbFC$V?A---m+Ðf@m!#t#V4qd^V4_1h$4j7br,2auv4@D \n",
-            "----\n",
-            "iter 0, loss: 113.846919\n",
-            "----\n",
-            " ko9cod an endorin adreleurtadikocrneat.  toa. onlrantyeb\n",
-            "ronesrmmothilis nomoonweralooeeatye ang are \n",
-            "----\n",
-            "iter 1000, loss: 88.073080\n",
-            "----\n",
-            " iuo al\n",
-            "ituins actuthife angleifidedic incriot Jactitiol cocreorysfsisu hal\n",
-            "palfiocin\"cimay ang. \n",
-            "\n",
-            "Th \n",
-            "----\n",
-            "iter 2000, loss: 71.356878\n",
-            "----\n",
-            " ger dcpakudeqhpaqghy al that qumld thic0tourcalgus us in prorget cexpmofay keegkecamtyakur wofilsy a \n",
-            "----\n",
-            "iter 3000, loss: 68.624097\n",
-            "----\n",
-            " prumat the ithe loolle latory. \n",
-            "\n",
-            "iphedmechitu thukesebickalived ergenumsterlaml thice.  fsinging ter \n",
-            "----\n",
-            "iter 4000, loss: 63.535718\n",
-            "----\n",
-            " rche .\n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "lishl uice pro be tiog wounge kare wes--les. .\n",
-            "\n",
-            "Thavillmo oad wars ar loosimans AnibDy ca \n",
-            "----\n",
-            "iter 5000, loss: 58.979158\n",
-            "----\n",
-            "  nike, in e d-artere.  nective rotoc. \n",
-            "\n",
-            "1iinteif caechitl thtte, thseched.  led th.\n",
-            "mve anat.  n mit \n",
-            "----\n",
-            "iter 6000, loss: 60.476217\n",
-            "----\n",
-            " s.  I Whef soiv whe ruca copn ic I (litels doriin prerd pry. \n",
-            "ine nac prcban feve mat oigema stK who \n",
-            "----\n",
-            "iter 7000, loss: 59.519451\n",
-            "----\n",
-            " hadtu, in beory ined alaring 1lat woth resally revirk trocat ot at if br ct.  ath. \n",
-            "\n",
-            "of I wackir.s s \n",
-            "----\n",
-            "iter 8000, loss: 56.532030\n",
-            "----\n",
-            " ) anser ir'ny Jiallire of an thiwe gnomemy is in suow unsifatirgot here e hie sthat alute kepatlis w \n",
-            "----\n",
-            "iter 9000, loss: 56.658940\n",
-            "----\n",
-            " t alat sreal at.\n",
-            "\n",
-            "a the this thotls.\" so mechen mexe o th the hesul mage oveal athod the the that me \n",
-            "----\n",
-            "iter 10000, loss: 58.744439\n",
-            "----\n",
-            " exesh or bet and asb de of at a gyce intestificher preting tist oby ow o bese ids \n",
-            "\n",
-            "wall m\n",
-            "paralinge \n",
-            "----\n",
-            "iter 11000, loss: 56.067653\n",
-            "----\n",
-            " u delacals? nould.\n",
-            "\n",
-            "chion\n",
-            "\n",
-            "soucped. \n",
-            "\n",
-            "- oups ashulscbmy it of ard of pat aperelo xucklle al sevefpec \n",
-            "----\n",
-            "iter 12000, loss: 54.451556\n",
-            "----\n",
-            " ice pratitr be ins wepemcos made ule redt of ancessti, pare.\n",
-            "\n",
-            "the thisingpis fo race thave donk.\n",
-            "cn, \n",
-            "----\n",
-            "iter 13000, loss: 58.034855\n",
-            "----\n",
-            " antisillinalory.  ifver pukcer stiyrathise ofs.  boyel conged rockes of wher fit inratereon)all expe \n",
-            "----\n",
-            "iter 14000, loss: 56.806599\n",
-            "----\n",
-            "  bay of dher addencrsek ids coussy.  s:scrd the do let AI dond prod fadd tidcat colty semty and west \n",
-            "----\n",
-            "iter 15000, loss: 54.660677\n",
-            "----\n",
-            " e:.. and do 6estio fo in my hages richme in eat nirch dore shing cacimonenture, at cont, is my naren \n",
-            "----\n",
-            "iter 16000, loss: 57.309820\n",
-            "----\n",
-            " s whand tha chicis in asdiges on souss toe shitite mabesion in to ny not it sine all_my d'cu I wine  \n",
-            "----\n",
-            "iter 17000, loss: 56.232843\n",
-            "----\n",
-            " for in Tn, IS made ming prtnhing oun a suve e to deem tale o pancoplith dat cal prod to ar.  I and o \n",
-            "----\n",
-            "iter 18000, loss: 53.611695\n",
-            "----\n",
-            " d in wish the Co hexy mide.  ang of IbMy luts thencale srod a racansirgice.\n",
-            "\n",
-            "Mater Ky tEXTeand.  Th  \n",
-            "----\n",
-            "iter 19000, loss: 54.849511\n",
-            "----\n",
-            " \n",
-            "\n",
-            "sever beam ha.\n",
-            "\n",
-            "br.\n",
-            "\n",
-            "I and the I Ifty utteritirk.\n",
-            "\n",
-            "Otexs thes wist of brituine the fonter there ar \n",
-            "----\n",
-            "iter 20000, loss: 56.134798\n",
-            "----\n",
-            " . \n",
-            "\n",
-            "sthigichidion wh have thhang I mar, waperis, your soplacios, rikee seme deces prod, you pulit pr \n",
-            "----\n",
-            "iter 21000, loss: 53.804387\n",
-            "----\n",
-            " leate- oO8 fahtercpad tnespsio. srater to \n",
-            "\n",
-            "sol ga art it uucfs as'thy so Cane on mdo sale.\n",
-            "\n",
-            "I'p moc \n",
-            "----\n",
-            "iter 22000, loss: 53.282442\n",
-            "----\n",
-            " interbor soigr of horoens olonalalA wist peal wonter of yovepor, reand. \n",
-            "The - deyis on artrola sein \n",
-            "----\n",
-            "iter 23000, loss: 56.373614\n",
-            "----\n",
-            " nd wigh ithere stime that'd fint on kersen enon a wise nacilago1ntischectmallyingrlatiss fahing borm \n",
-            "----\n",
-            "iter 24000, loss: 53.816768\n",
-            "----\n",
-            " sut am\"ineses-2lear raf woell.  Sfukis. oncelet hast r.  Boow sis limef.  The gmang. \n",
-            "\n",
-            "sach a Lract  \n",
-            "----\n",
-            "iter 25000, loss: 52.225339\n",
-            "----\n",
-            " he ivendorescall dilac. rivulim lrowals proniegny sond: pofound.\n",
-            "\n",
-            "The -15, lank rapescatugh wads.\n",
-            "\n",
-            "W \n",
-            "----\n",
-            "iter 26000, loss: 55.362323\n",
-            "----\n",
-            " oed ic.  sofuck gos danLce mowhal do I cantiog. \n",
-            "\n",
-            "sahe rill becednd2pfapirlevide - no'nt-ading art.  \n",
-            "----\n",
-            "iter 27000, loss: 54.023309\n",
-            "----\n",
-            " wtyous atenter. \n",
-            "\n",
-            "eagresinvolyton't rareldery that lanke laliccerd inam ow leeciting. wonder a. bere \n",
-            "----\n",
-            "iter 28000, loss: 51.559045\n",
-            "----\n",
-            " eyfugens pakere to oos ance o ODCSout coit 8Myore it cak that thirguboerent, modrion.  and a miching \n",
-            "----\n",
-            "iter 29000, loss: 53.425683\n",
-            "----\n",
-            " ing.  sunvest interal to nacts bed deher go vortenf to wingiens, cadrabos.  reilallonangrieacriboet. \n",
-            "----\n",
-            "iter 30000, loss: 54.126036\n",
-            "----\n",
-            "  youncal.  a be dimploon.  I I (a digghing goed worbovectane voresing-plinc angend, to nuc aly cyels \n",
-            "----\n",
-            "iter 31000, loss: 51.793229\n",
-            "----\n",
-            " e\n",
-            "thod on ctyhe\n",
-            "\n",
-            "have alwing)\n",
-            "\n",
-            "thas like my moresys, it this scuetrecinat hyperking.\n",
-            "\n",
-            "it nevery boy  \n",
-            "----\n",
-            "iter 32000, loss: 51.635968\n",
-            "----\n",
-            " ncial alye to cere. \n",
-            "\n",
-            "Lowhy withgich nhe, ader to dece to to that it: A2tiontionthergh, thy heve lat \n",
-            "----\n",
-            "iter 33000, loss: 54.771468\n",
-            "----\n",
-            " ecesthay this son the stode whabertctoecteschiy prkeragit broprily meane protitioctrris or omarsoonc \n",
-            "----\n",
-            "iter 34000, loss: 52.216649\n",
-            "----\n",
-            " ch.  TOhisills, ro thot ot, an't , ctrk, Whet is as a cor comedomy ster the  to\n",
-            "\n",
-            "thethabisiost.  cem \n",
-            "----\n",
-            "iter 35000, loss: 50.669296\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "\n",
@@ -420,7 +224,27 @@
         "    x = np.zeros((vocab_size, 1))\n",
         "    x[ix] = 1\n",
         "    ixes.append(ix)\n",
-        "  return ixes\n",
+        "  return ixes"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "You should see a message about your data if the cell ran properly. (f.ex: `data has 82463 characters, 95 unique.`)\n",
+        "\n",
+        "The next cell declares some variables and will actually run the training loop.\n",
+        "\n",
+        "**Run the following cell**.\n",
+        "\n",
+        "Watch it run for a while and see how the outputs change. This will run **forever**. At some point you should click stop and then export your .ipynb and your .pdf to submit for the homework."
+      ],
+      "metadata": {
+        "id": "ai8gN5me6HDb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
         "n, p = 0, 0\n",
         "mWxh, mWhh, mWhy = np.zeros_like(Wxh), np.zeros_like(Whh), np.zeros_like(Why)\n",
@@ -454,16 +278,46 @@
         "\n",
         "  p += seq_length # move data pointer\n",
         "  n += 1 # iteration counter"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
+      ],
       "metadata": {
-        "id": "SJqDwTmMce42"
+        "id": "9mMOhQLc52Dp"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Watch it run for a while and see how the outputs change. **Answer the following questions in the empty text box below**:\n",
+        "1. How many iterations did you getup to? This is a count of how many training examples you showed to the network.\n",
+        "2. What is the final loss for your network? (**loss**). Where did the loss start? The loss function, or loss score, is the main measure of learning in a neural network.\n",
+        "3. How do the outputs look at the end? Is the text intelligible? Does it make sense? Does the output sample resemble the training data that you showed to the network?"
+      ],
+      "metadata": {
+        "id": "sjJBGW6764eK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "wr1YsgXE7mzA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## End of Section 2\n",
+        "\n",
+        "Don't forget to submit your homework on Canvas.\n",
+        "\n",
+        "Export your file as a jupyter notebook (.ipynb), and also save a copy as a PDF. Give them descriptive filenames (*Twomey-H1.ipynb*, and *Twomey-H1.pdf* for instance but with your last name).\n",
+        "\n",
+        "Submit this as Homework 1 on Canvas."
+      ],
+      "metadata": {
+        "id": "v39j6ViS7v60"
+      }
     }
   ],
   "metadata": {
