--- a/exercises/h2-prompt-v-finetune.ipynb
+++ b/exercises/h2-prompt-v-finetune.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/roberttwomey/ml-art-code/blob/master/gpt-2/gpt2-generate-finetune.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/roberttwomey/ml-art-code/blob/master/exercises/h2-prompt-v-finetune.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -16,17 +16,21 @@
         "id": "H7LoMj4GA4n_"
       },
       "source": [
-        "#  GPT-2 Generation and Fine-Tuning\n",
+        "#  Prompting vs. Finetuning\n",
         "\n",
-        "This notebook explores GPT-2 (Generative Pretrained Transformer-2) from OpenAI. Read more about it [here](https://openai.com/blog/better-language-models/).\n",
+        "The predominant (and encourged) way of interacting with Large Language Models ([LLMs](https://en.wikipedia.org/wiki/Large_language_model)) such as ChatGPT is through prompting. The idea with prompting an LLM is that the model already contains the flexibility to address a diverse array of requests, it is simply a matter of presenting it with a context that elicits the desired response.\n",
         "\n",
-        "Activities include:\n",
+        "Prompting a model does not change anything about the model, it is simply a query on the pre-existing system. So to some extent you are working with what is \"given\", by OpenAI or whomever published your model of choice.\n",
         "\n",
-        "0. Setup\n",
-        "1. Generate samples from pre-trained gpt-3 model\n",
-        "2. Fine-tune gpt-2 on text of your choosing.\n",
+        "Finetuning a model is a way of continuing its training, beyond what the researchers, corporation, etc. imbued in it, to specialize to a particular domain or textual corpus that is your choice.\n",
         "\n",
-        "Adapted by Robert Twomey (rtwomey@unl.edu) for Machine Learning for the Arts SP22 from this [google colab](https://colab.research.google.com/drive/1VLG8e7YSEwypxU-noRNhsv5dW4NfTGce) by [Max Woolf](http://minimaxir.com). See his repo [gpt-2-simple](https://github.com/minimaxir/gpt-2-simple)."
+        "This exercise explores GPT-2 ([Generative Pretrained Transformer-2](https://openai.com/blog/better-language-models/)) from OpenAI from these perspectives of Prompting vs. Finetuning.\n",
+        "\n",
+        "Two parts:\n",
+        "- 1. Prompting\n",
+        "- 2. Finetuning\n",
+        "\n",
+        "Discussion"
       ]
     },
     {
@@ -35,7 +39,7 @@
         "id": "j2lXOa49wl7d"
       },
       "source": [
-        "# 0. Setup"
+        "# 0. Setup your GPT-2 Environment"
       ]
     },
     {
@@ -83,46 +87,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Bj2IJLHP3KwE"
-      },
-      "source": [
-        "## GPU\n",
-        "\n",
-        "Colaboratory uses either a Nvidia T4 GPU or an Nvidia K80 GPU. The T4 is slightly faster than the old K80 for training GPT-2, and has more memory allowing you to train the larger GPT-2 models and generate more text.\n",
-        "\n",
-        "You can verify which GPU is active by running the cell below."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "sUmTooTW3osf"
-      },
-      "outputs": [],
-      "source": [
-        "!nvidia-smi"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "QYRthEa1wl7f"
-      },
-      "source": [
-        "note the memory usage (0MiB / 32510MiB) for the Tesla V100.\n",
-        "You can re-rerun the above cell to see what memory your code/models are using during training."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "0wXB05bPDYxS"
       },
       "source": [
         "## Downloading GPT-2\n",
-        "\n",
-        "If you're retraining a model on new text, you need to download the GPT-2 model first.\n",
         "\n",
         "There are three released sizes of GPT-2:\n",
         "\n",
@@ -182,8 +150,9 @@
         "id": "QQAN3M6RT7Kj"
       },
       "source": [
-        "# 1. Generate Text From The Pretrained Model\n",
+        "# 1. Prompting\n",
         "\n",
+        "GPT-2 is assuredly less-capable than ChatGPT in prompting, but the same basic principles underly the interaction: the idea of \"completion\". A prompt for GPT-2 is a string (prefix), which the language model then tries to continue/extend.  \n",
         "If you want to generate text from the pretrained model pass `model_name` to `gpt2.load_gpt2()` and `gpt2.generate()`. (This is currently the only way to generate text from the 774M or 1558M models with this notebook.)"
       ]
     },
@@ -802,7 +771,6 @@
     "colab": {
       "name": "Train a GPT-2 Text-Generating Model w/ GPU",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
