--- a/exercises/h2-prompt-v-finetune.ipynb
+++ b/exercises/h2-prompt-v-finetune.ipynb
@@ -16,7 +16,7 @@
         "id": "H7LoMj4GA4n_"
       },
       "source": [
-        "#  Prompting vs. Finetuning\n",
+        "#  Prompting vs. Finetuning GPT-2\n",
         "\n",
         "The predominant (and encourged) way of interacting with Large Language Models ([LLMs](https://en.wikipedia.org/wiki/Large_language_model)) such as ChatGPT is through prompting. The idea with prompting an LLM is that the model already contains the flexibility to address a diverse array of requests, it is simply a matter of presenting it with a context that elicits the desired response.\n",
         "\n",
@@ -769,7 +769,6 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "name": "Train a GPT-2 Text-Generating Model w/ GPU",
       "provenance": [],
       "include_colab_link": true
     },
