--- a/exercises/h2-prompt-v-finetune.ipynb
+++ b/exercises/h2-prompt-v-finetune.ipynb
@@ -53,24 +53,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "id": "As9SPgtjwl7e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "8a718250-2212-4d59-86c1-98ff6f008f4f"
+        "id": "As9SPgtjwl7e"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for gpt-2-simple (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "%pip install -q gpt-2-simple"
       ]
@@ -86,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "KBkpRgBCBS2_"
       },
@@ -119,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "P8wSlgXoDPCR"
       },
@@ -139,29 +126,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
-        "id": "thg7irbWwl7f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6b455c5d-494b-4d2c-f5f4-fd3ef506b5ba"
+        "id": "thg7irbWwl7f"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Fetching checkpoint: 1.05Mit [00:00, 3.98Git/s]                                                     \n",
-            "Fetching encoder.json: 1.05Mit [00:00, 5.22Mit/s]\n",
-            "Fetching hparams.json: 1.05Mit [00:00, 4.05Git/s]                                                   \n",
-            "Fetching model.ckpt.data-00000-of-00001: 498Mit [00:08, 61.2Mit/s]                                  \n",
-            "Fetching model.ckpt.index: 1.05Mit [00:00, 3.64Git/s]                                               \n",
-            "Fetching model.ckpt.meta: 1.05Mit [00:00, 6.58Mit/s]\n",
-            "Fetching vocab.bpe: 1.05Mit [00:00, 6.92Mit/s]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "gpt2.download_gpt2(model_name=model_name)"
       ]
@@ -181,23 +150,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
-        "id": "BAe4NpKNUj2C",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "67d5b08b-bace-4310-98d6-8a9470588fa2"
+        "id": "BAe4NpKNUj2C"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Loading pretrained model models/124M/model.ckpt\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# start session and load model\n",
         "sess = gpt2.start_tf_sess()\n",
@@ -222,60 +179,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
-        "id": "-xInIZKaU104",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "13579eac-29e4-48f9-c102-a40ba114fcd8"
+        "id": "-xInIZKaU104"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The secret of life is the other side. The secret of life is the other side.\"\n",
-            "\n",
-            "He continued: \"The other side is the other side. And we need to fight for it.\"\n",
-            "\n",
-            "And the long fight will continue.\n",
-            "\n",
-            "—\n",
-            "\n",
-            "The only way to keep a secret is to keep it.\n",
-            "\n",
-            "A few weeks ago, I had the opportunity to meet the husband of a former soldier who has been involved with the military for over 20 years.\n",
-            "\n",
-            "The man is the son of\n",
-            "====================\n",
-            "The secret of life is not necessarily to be found in the walls of the city, but in the walls of the city itself.\n",
-            "\n",
-            "\"The only way to preserve life is to go to the temple. I think the temple should be opened by the children of the temple. There should be a mass of men who would gather to go to the temple and to be paid their respects. They should be brought to the temple and pay their respects. They should be taken out of the temple and brought to the temple for their\n",
-            "====================\n",
-            "The secret of life is not to survive. It's to be where you are and to be where you are.\n",
-            "\n",
-            "But I do not believe we can survive in the world without this.\n",
-            "\n",
-            "The fact is that we have been through an enormous amount of suffering and we have been through a great deal of pain and we have been through a great deal of anguish and we have been through many painful experiences and we have been through many many painful deaths.\n",
-            "\n",
-            "I believe that we can survive without this. We can\n",
-            "====================\n",
-            "The secret of life is to work hard, to work hard, and to be happy. That's the way I look at it. I think of it as the good, the bad, the ugly, the ugly, the ugly, the ugly, the ugly. I think of it as the only way to be happy.\n",
-            "\n",
-            "The good news is that when you're working hard, you're going to get better. The bad news is that you're going to get worse. You're going to get worse. You\n",
-            "====================\n",
-            "The secret of life is to live within the pattern, and that is to live in the pattern.\n",
-            "\n",
-            "One way of knowing about what is going on in the universe is by looking at the stars. This is the way in which the cosmos is organized and the way in which the sun is set.\n",
-            "\n",
-            "The stars are the fundamental elements of the universe, which are connected with the planets, and they are the foundation of all life. The Sun and the planets are the foundation of all life.\n",
-            "\n",
-            "The planets\n",
-            "====================\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# sample model with stock phrase/prompt \"The secret of life is...\"\n",
         "# edit as you see fit\n",
@@ -430,11 +338,18 @@
       },
       "outputs": [],
       "source": [
-        "model_name = \"124M\"\n",
+        "model_name = \"124M\" # same model as selected above\n",
         "\n",
-        "# start session and load model\n",
-        "sess = gpt2.start_tf_sess()\n",
-        "gpt2.load_gpt2(sess, model_name=model_name)"
+        "# reset the tensorflow model storage if necessary\n",
+        "tf.compat.v1.reset_default_graph()\n",
+        "\n",
+        "# check if sess exists (e.g. if we ran section 1 above)\n",
+        "var_exists = 'sess' in locals() or 'sess' in globals()\n",
+        "\n",
+        "if not var_exists:\n",
+        "    sess = gpt2.start_tf_sess()\n",
+        "else:\n",
+        "    sess = gpt2.reset_session(sess)"
       ]
     },
     {
