--- a/style/style_transfer.ipynb
+++ b/style/style_transfer.ipynb
@@ -16,7 +16,7 @@
         "id": "r_p4-F8m7Ivt"
       },
       "source": [
-        "ML for the Arts - Twomey - Spring 2022 - [ml.roberttwomey.com](http://ml.roberttwomey.com)"
+        "ML for the Arts - Twomey - [ml.roberttwomey.com](http://ml.roberttwomey.com)"
       ]
     },
     {
@@ -34,7 +34,7 @@
         "id": "aDyGj8DmXCJI"
       },
       "source": [
-        "__NOTE for OOD users__: select the `TensorFlow GPU 2.4 (py38)` kernel.\n",
+        "<!-- __NOTE for OOD users__: select the `TensorFlow GPU 2.4 (py38)` kernel.-->\n",
         "\n",
         "__Description__\n",
         "\n",
